// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="sc-khQegj bHoUDI"
>
  <h1
    class="sc-hUpaCq gSWII"
  >
    Who's watching?
  </h1>
  <ul
    class="sc-jgrJph gzVyFb"
  >
    <li
      class="sc-iNGGcK edWikk"
    >
      <img
        class="sc-lbhJGD"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="sc-gSQFLo eMjXkS"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="sc-khQegj bHoUDI"
>
  <h1
    class="sc-hUpaCq gSWII"
  >
    Who's watching?
  </h1>
  <ul
    class="sc-jgrJph gzVyFb"
  >
    <li
      class="sc-iNGGcK edWikk"
    >
      <img
        class="sc-lbhJGD"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="sc-gSQFLo eMjXkS"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
